--- a/docroot/sites/all/themes/custom/mmorpg/sass/components/_article.scss
+++ b/docroot/sites/all/themes/custom/mmorpg/sass/components/_article.scss
@@ -39,14 +39,17 @@
 		font-size: 14px;
 		line-height: 1.6em;
 		margin: 0 auto;
-		top: -40px;
-		margin-bottom: -40px;
+		top: -20px;
+		margin-bottom: -20px;
 		padding: 20px;
 		background: $white;
 		border-top: 4px solid $light-blue;
-		max-width: 715px;
 		position: relative;
-		width:100%;
+		width: 92%;
+		@include breakpoint(1024px){
+			top: -40px;
+			margin-bottom: -40px;
+		}
 
 		img{
 			max-width: 715px;
